--- a/radio1.html
+++ b/radio1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webxos Radio</title>
+    <title>Alien Radio</title>
     <style>
         body {
             margin: 0;
@@ -104,7 +104,7 @@
 </head>
 <body>
     <div class="radio-container">
-        <div class="title">Webxos Radio</div>
+        <div class="title">Alien Radio</div>
         <div class="tuner" id="tuner">
             <div class="tuner-dot" id="tuner-dot"></div>
         </div>
@@ -115,7 +115,7 @@
             <button class="preset-btn" data-station="2">Galactic Hum</button>
             <button class="preset-btn" data-station="3">Sleep Radio</button>
         </div>
-        <div class="copyright">© 2025 Webxos. All rights reserved.</div>
+        <div class="copyright">© 2025 Soundsynths. All rights reserved.</div>
     </div>
 
     <script>
