--- a/radio1.html
+++ b/radio1.html
@@ -115,7 +115,7 @@
             <button class="preset-btn" data-station="2">Galactic Hum</button>
             <button class="preset-btn" data-station="3">Sleep Radio</button>
         </div>
-        <div class="copyright">© 2025 Soundsynths. All rights reserved.</div>
+        <div class="copyright">© 2025 Soundsynths. All rights reserved.***Warning: Alien Radio picks up radio frequency from space. If signal is intercepted refresh the page.***</div>
     </div>
 
     <script>
